[metadata]
name = gabbi-demo
author = Chris Dent
author-email = cdent@peermore.com
summary = Demo for Gabbi
description-file = README.md
license = Apache-2
home-page = https://github.com/cdent/gabbi-demo
classifier =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Topic :: Internet :: WWW/HTTP :: WSGI
    Topic :: Software Development :: Testing

[files]
packages =
    gdemo
